--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_test_vlanmap_using_mininet.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_test_vlanmap_using_mininet.adoc
@@ -18,9 +18,21 @@ https://wiki.opendaylight.org/view/OpenDaylight_Virtual_Tenant_Network_(VTN):Scr
 ----
 sudo mn --controller=remote,ip=192.168.64.13 --custom vlan_vtn_test.py --topo mytopo
 ----
+
+NOTE: Add the default flow to OVS to forward packets to controller when there is a table-miss:
+
+----
+ovs-ofctl --protocols=OpenFlow13 add-flow <switch-name> priority=0,actions=output:CONTROLLER
+----
+
+These flows need to be added only in case of OpenFlow1.3 or using OVS versions (>2.1.1).
+
+Here the switch name is the switches in the topology such as s1,s2,s3.
+
 ===== Configuration
 
 Please follow the below steps to test a vlan map using mininet:
+
 * Create a controller
 
 ----
