--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_Use_VTN_to_make_packets_take_different_paths.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_Use_VTN_to_make_packets_take_different_paths.adoc
@@ -2,7 +2,7 @@
 This example demonstrates on how to create a specific VTN Path Map information.
 
 .PathMap
-image::vtn/Pathmap.png[pathmap]
+image::vtn/Pathmap.png["Pathmap" ,width= 500]
 
 ===== Requirement
 * Save the mininet script given below as pathmap_test.py and run the mininet script in the mininet environment where Mininet is installed.
@@ -10,8 +10,8 @@ image::vtn/Pathmap.png[pathmap]
 * Create topology using the below mininet script:
 
 ----
-from mininet.topo import Topo
-  class MyTopo( Topo ):
+ from mininet.topo import Topo
+ class MyTopo( Topo ):
     "Simple topology example."
     def __init__( self ):
         "Create custom topo."
@@ -44,6 +44,16 @@ from mininet.topo import Topo
  h1 h1-eth0:s1-eth1
  h2 h2-eth0:s3-eth3
 ----
+
+NOTE: Add the default flow to OVS to forward packets to controller when there is a table-miss:
+
+----
+ovs-ofctl --protocols=OpenFlow13 add-flow <switch-name> priority=0,actions=output:CONTROLLER
+----
+
+These flows need to be added only in case of OpenFlow1.3 or using OVS versions (>2.1.1).
+
+Here the switch name is the switches in the topology such as s1,s2,s3.
 
 * Generate traffic by pinging between hosts h1 and h2 before creating the portmaps respectively
 
@@ -109,19 +119,19 @@ curl -X GET -H 'content-type: application/json' --user 'admin:adminpass' "http:/
 * Create a Flowcondition in the VTN
 
 ----
-curl --user admin:admin -H 'content-type: application/json' -X PUT -d '{"name": "flowcond_1","match": [{"index": 1,"ethernet": {"src": "ca:9e:58:0c:1e:f0","dst": "ba:bd:0f:e3:a8:c8","type": 2048},"inetMatch": {"inet4": {"src": "10.0.0.1","dst": "10.0.0.2","protocol": 1}}}]}' http://10.100.9.42:8282/controller/nb/v2/vtn/default/flowconditions/flowcond_1
+curl --user "admin":"admin" -H "Content-type: application/json" -X POST http://localhost:8181/restconf/operations/vtn-flow-condition:set-flow-condition -d '{"input":{"operation":"SET","present":"false","name":"cond_1", "vtn-flow-match":[{"vtn-ether-match":{},"vtn-inet-match":{"source-network":"10.0.0.1/32","protocol":1,"destination-network":"10.0.0.2/32"},"index":"1"}]}}'
 ----
 
 * Create a Pathmap in the VTN
 
 ----
-curl --user admin:admin -H 'content-type: application/json' -X PUT -d '{"index": 10, "condition":"flowcond_1", "policy":1, "idleTimeout": 300, "hardTimeout": 0}' http://10.100.9.42:8282/controller/nb/v2/vtn/default/pathmaps/1
+curl --user "admin":"admin" -H "Content-type: application/json" -X POST http://localhost:8181/restconf/operations/vtn-path-map:set-path-map -d '{"input":{"tenant-name":"vtn1","path-map-list":[{"condition":"cond_1","policy":"1","index": "1","idle-timeout":"300","hard-timeout":"0"}]}}'
 ----
 
 * Get the Path policy information
 
 ----
-curl --user admin:admin -H 'content-type: application/json' -X GET -d '{"id": 1,"default": 100000,"cost": [{"location": {"node": {"type": "OF","id": "00:00:00:00:00:00:00:01"},"port": {"type": "OF","id": "3","name": "s1-eth3"}},"cost": 1000},{"location": {"node": {"type": "OF","id": "00:00:00:00:00:00:00:04"},"port": {"type": "OF","id": "2","name": "s4-eth2"}},"cost": 1000},{"location": {"node": {"type": "OF", "id": "00:00:00:00:00:00:00:03"},"port": {"type": "OF","id": "3","name": "s3-eth3"}},"cost": 100000}]}' http://10.100.9.42:8282/controller/nb/v2/vtn/default/pathpolicies/1
+curl --user "admin":"admin" -H "Content-type: application/json" -X POST http://localhost:8181/restconf/operations/vtn-path-policy:set-path-policy -d '{"input":{"operation":"SET","id": "1","default-cost": "10000","vtn-path-cost": [{"port-desc":"openflow:1,3,s1-eth3","cost":"1000"},{"port-desc":"openflow:4,2,s4-eth2","cost":"100000"},{"port-desc":"openflow:3,3,s3-eth3","cost":"10000"}]}}'
 ----
 
 ===== Verification
@@ -132,18 +142,18 @@ curl --user admin:admin -H 'content-type: application/json' -X GET -d '{"id": 1,
         "pathinfos": [
             {
               "in_port_name": "s1-eth1",
-              "out_port_name": "s1-eth2",
-              "switch_id": "00:00:00:00:00:00:00:01"
+              "out_port_name": "s1-eth3",
+              "switch_id": "openflow:1"
             },
             {
-              "in_port_name": "s2-eth1",
-              "out_port_name": "s2-eth2",
-              "switch_id": "00:00:00:00:00:00:00:02"
+              "in_port_name": "s4-eth1",
+              "out_port_name": "s4-eth2",
+              "switch_id": "openflow:4"
             },
             {
-               "in_port_name": "s3-eth1",
+               "in_port_name": "s3-eth2",
                "out_port_name": "s3-eth3",
-               "switch_id": "00:00:00:00:00:00:00:03"
+               "switch_id": "openflow:3"
             }
                      ]
 }
@@ -155,18 +165,18 @@ curl --user admin:admin -H 'content-type: application/json' -X GET -d '{"id": 1,
     "pathinfos": [
             {
               "in_port_name": "s1-eth1",
-              "out_port_name": "s1-eth3",
-              "switch_id": "00:00:00:00:00:00:00:01"
+              "out_port_name": "s1-eth2",
+              "switch_id": "openflow:1"
             },
             {
-              "in_port_name": "s4-eth1",
-              "out_port_name": "s4-eth2",
-              "switch_id": "00:00:00:00:00:00:00:04"
+              "in_port_name": "s2-eth1",
+              "out_port_name": "s2-eth2",
+              "switch_id": "openflow:2"
             },
             {
-               "in_port_name": "s3-eth2",
+               "in_port_name": "s3-eth1",
                "out_port_name": "s3-eth3",
-               "switch_id": "00:00:00:00:00:00:00:03"
+               "switch_id": "openflow:3"
             }
                      ]
 }
