--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_view_Dataflows.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_view_Dataflows.adoc
@@ -2,7 +2,7 @@
 This example demonstrates on how to view a specific VTN Dataflow information.
 
 ===== Configuration
-The same Configuration as Vlan Mapping Example(https://wiki.opendaylight.org/view/OpenDaylight_Virtual_Tenant_Network_(VTN):VTN_Coordinator:RestApi:How_to_test_vlan-map_in_Mininet_environment)
+The same Configuration as Vlan Mapping Example(https://wiki.opendaylight.org/view/VTN:Coordinator:Beryllium:HowTos:How_To_test_vlanmap_using_mininet)
 
 ===== Verification
 Get the VTN Dataflows information
