--- a/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_configure_flow_filters.adoc
+++ b/manuals/user-guide/src/main/asciidoc/vtn/VTN_How_To_configure_flow_filters.adoc
@@ -48,6 +48,17 @@ h2 h2-eth0:s2-eth2
 h3 h3-eth0:s3-eth1
 h4 h4-eth0:s3-eth2
 ----
+
+NOTE: Add the default flow to OVS to forward packets to controller when there is a table-miss:
+
+----
+ovs-ofctl --protocols=OpenFlow13 add-flow <switch-name> priority=0,actions=output:CONTROLLER
+----
+
+These flows need to be added only in case of OpenFlow1.3 or using OVS versions (>2.1.1).
+
+Here the switch name is the switches in the topology such as s1,s2,s3.
+
 ===== Configuration
 * .Create a controller
 
